Make bio shorter

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Cameron McGarry"
   pronouns         : # example: "she/her"  
-  bio              : "Researcher in quantum atomic and photonic physics"
+  bio              : "Researcher in atomic and photonic physics"
   location         : "Sydney, NSW, Australia"
   employer         : "University of Sydney"
   uri              : # URL
